--- a/files/main.css
+++ b/files/main.css
@@ -101,3 +101,21 @@ ul li{
 footer {
     text-align:center; 
 }
+#imgComic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 50%;
+}
+
+#titleComic {
+    text-align: center;
+}
+
+#comicSection {
+    margin-bottom: 50px;
+}
+#dateComic {
+    text-align: center;
+}
